Bug 391991 getCharacterExtents() is returning (0,0,0,0) for text that is not on the first line of an HTML object r=aaronleventhal a=dsicore